stylesheets/site/_home.scss
.navigation {
  background-image: url(../images/logo_top_2x.png);
  background-repeat: no-repeat;
  background-size: 161px;
  min-height: 86px;

  padding-top: 30px;

  ul {
    display: inline;
    list-style-type: none;
    margin-top: 0px;
    li {
      display: inline;
      a {
        @include setFontToBaseline(16px, 0, 0);
        margin-top: 30px !important;
        color: $sti-white;
      }
    }
  }

  .navigation__sections {
    text-align: center;
    li {
      padding-right: 50px;
      a {
        letter-spacing: 0.14em;
      }
    }
  }

  .navigation__languages {
    float: right;
    li {
      padding-right: 12px;
      a {
        letter-spacing: 0em;
        color: $sti-white;
        &:active {
          background-color: #3f9fb7;
        }
      }
    }
  }

}

.home__intro__outer {
  background-color:    $sti-blue-new;
  background-image:    url(../images/background.jpg);
  background-size:     100% cover;
  background-repeat:   no-repeat;
  background-position: bottom center;
}

.home__intro__inner {
  @include container;
}

.home__intro__content {
  @include span(24);
  color: $sti-white;
  text-align: center;

  h1 {
    @include setFontToBaseline(64px, 0, 0);
    font-weight: 700;
    letter-spacing: -0.06em;
  }

  .title-subtext {
    @include setFontToBaseline(20px, 0, 0);
  }

  .counter {
    @include susy-breakpoint($mobile, $tablet-small) {
      width: span(22 of 24);
      margin-left: span(1 of 24);
    }

    @include susy-breakpoint($tablet-small, $desktop-large) {
      @include span(8 of 24);
      margin-left:  span(8 of 24) ;
      margin-right: span(8 of 24);
    }

    position: relative;
    bottom: -40px;

    table {
      margin-left: auto;
      margin-right: auto;
      width: available;
      visibility: hidden;
      tr {
        td:nth-child(odd) {
          @include setFontToBaseline(32px, 1, 1);
          padding-left: 2rem;
        }
        td:nth-child(even) {
          @include setFontToBaseline(14px, 0, 0);
          line-height: 1;
          letter-spacing: 0.06em;
          text-align: left;
          padding-left: 0.5rem;
        }
      }
    }

    p:last-of-type {
      @include cf;
      width: 100%;
      text-align: center;
      margin-top: 0px;
      margin-bottom: 0px;
      padding-left: 0 !important;
      padding-right: 0 !important;
      a {
        margin-top: 0px !important;
        margin-bottom: 0px !important;
        margin-left: 0px !important;
        margin-right: 0px !important;
      }
      #take-action-button {
        @include setFontToBaseline(27px, 1, 1);
        @extend .btn;
        @extend .btn-default;
        margin-top: 0px;
        margin-bottom: 0px;
        font-family: $montserrat;
        color: $sti-white;
        padding-top: 27px;
        padding-bottom: 27px;
        font-weight: 700;
        background-color: #ff4c0d;
        border: none;
        border-radius: 8px;
        @include susy-breakpoint($mobile, $tablet-small) {
          width: span(22 of 24);
        }
        @include susy-breakpoint($tablet-small, $desktop-large) {
          width: span(24 of 24);
        }
        &:hover {
          background-color: #9f320b !important;
          color: $sti-white !important;
        }
        &:active {
          background-color: #9f320b !important;
          color: $sti-white !important;
        }
        &:hover {
          background-color: #9f320b !important;
          color: $sti-white !important;
        }
      }
    }
  }
}

.home__fix-net-neutrality__outer {
  background-color: $sti-white;
}

.home__fix-net-neutrality__inner {
  @include container;
}

@mixin fix-net-neutrality-column($topic) {
  .home__#{$topic} {
    @include susy-breakpoint($mobile, $tablet-small) {
      padding-left:     span(3 of 24);
    }
    @include susy-breakpoint($tablet-small, $desktop-large) {
      @include span(8 of 24);
      padding-left:     span(1 of 24);
      margin-right:      0px !important;
    }
    box-sizing:        border-box;
    background-image:  url("../images/#{topic}.png");
    background-image:  url("../images/#{$topic}.svg");
    background-size:   50px;
    background-repeat: no-repeat;
    padding-bottom: span(1);
  }
}

.home__fix-net-neutrality__content {
  margin-top: 80px;

  h2 {
    @include setFontToBaseline(46px, 1, 1);
    font-weight: 300;
    color: #286e82;
    font-family: $opensans;
    text-align: center;
  }

  h3 {
    font-weight: 700;
    font-family: $opensans;
    @include setFontToBaseline(20px, 0, 0);
    text-align: left;
    margin-top: 0px;
    color: #435058;
  }

  p {
    @include setFontToBaseline(15px, 0, 0);
    line-height: 1.33;
    font-family: $opensans;
    font-weight: 300;
    text-align: left;
  }

  p:last-of-type {
    text-align: left;
    a {
      @include setFontToBaseline(12px, 1, 1);
      font-weight: 300;
      font-family: $opensans;
      color: #16a6f8;
      text-decoration: underline;
    }
  }

  @include fix-net-neutrality-column("specialised-services");
  @include fix-net-neutrality-column("traffic-management");
  @include fix-net-neutrality-column("zero-rating");

  &::after {
    @include cf;
    content:'';
    margin: 0 auto;
    width: 0;
    height: 0;
    border-style: solid;
    border-width: 0 80px 20px 80px;
    border-color: transparent transparent $sti-blue-new transparent;
  }
}

#questionnaire-loading-spinner {
  display: none;
  text-align: center;
  @include setFontToBaseline(30px, 1, 1);
}

.home__questionnaire__outer {
  background-color: $sti-blue-new;
}

.home__questionnaire__inner {
  @include container;
}

.home__questionnaire__content {
  @include span(24);
  color: $sti-white;
  text-align: center;
  a {
    color: $sti-white;
    text-decoration: underline;
  }

  iframe {
    width: 100%;
    border: none;
    border-radius: 0px;
    @include susy-breakpoint($tablet-small, $desktop-large) {
      border-radius: 6px;
    }
  }
}


.home__spread-the-word__outer {
  background-color: #1c1e23;
}

.home__spread-the-word__inner {
  @include container;
}

.home__spread-the-word__content {
  @include span(12 of 24);
  margin-left: span(6 of 24);
  margin-right: span(6 of 24);
  color: $sti-white;
  text-align: center;

  h2 {
    @include setFontToBaseline(32px, 1, 1);
    font-family: $opensans;
    font-weight: 300;
  }

  a {
    @extend .btn;
    @extend .btn-default;
    @extend .btn-lg;
    color: $sti-white;
    border: none;
    border-radius: 6px;
    margin-top: 0px;
  }

  p {
    display: inline-block;
    margin-top: 0px;
  }

  p:first-of-type {
    a {
      background-color: #464cc8;
    }
  }

  p:last-of-type {
    a {
      background-color: #08CEFF;
    }
  }

}

.home__newsletter__outer {
  background-color: #010101;
}

.home__newsletter__inner {
  @include container;
}

.home__newsletter__content {
  @include span(24 of 24);
  text-align: center;
  margin-top: 3rem;
  margin-bottom: 3rem;

  form {
    .form-group {
      #newsletter-email {
        width: 20rem;
        max-width: 100%;
        margin-right: 1rem;
      }
      #newsletter-submit {
        @extend .btn;
        @extend .btn-default;
        @extend .btn-lg;
        color: $sti-white;
        background-color: #ff4c0d;
        border: none;
        border-radius: 6px;
      }
    }
  }
}

.home__video__outer {
  background-color: $sti-white;
}

.home__video__inner {
  @include container;
}

.home__video__content {
  @include span(24);
  background-color: #010101;
  color: $sti-white;
  text-align: center;
}

#video-carousel {
  background-color: $sti-black-dark;
  padding-top: span(2);
  padding-bottom: span(2);
}

.home-video {
  margin-left: auto !important;
  margin-right: auto !important;
  text-align: center;

  @extend .embed-responsive;

  min-height: 240px;
  min-width: 320px;

  @include susy-breakpoint($tablet-small) {
     min-height: 380px;
     min-width: 180px;
  }

}

.video-placeholder {
    cursor: pointer;
    opacity: 0.7;

    img {
    	width: 300px;
    	@include susy-breakpoint($tablet-small) {
	    width: unset;
    	}
    }
}

.video-placeholder:hover {
    opacity: 1;
}

// bootstrap overrides

.carousel {

  .right, .left {
    top: auto;
    bottom: -20px;
  }

  @include susy-breakpoint($tablet) {
    .right, .left {
      top: 50%;
      margin-top: -1.5em;
      bottom: auto;
    }
  }
}

.carousel-indicators {
  bottom: 0;

  li {
    box-sizing: border-box;
  }
}

.carousel-inner {
    margin: auto;
}

.home__info__outer {
  background-color: $sti-white;
}

.home__info__inner {
  @include container;
}

.home__info__content {
  @include span(24);
  color: $sti-blue-light-new;
  text-align: center;
}

.home__berec-1__outer {
  background-color: $sti-white;
}

.home__berec-1__inner {
  @include container;
}

.home__berec-1__content {
  @include span(24);
  color: $sti-white;
  text-align: center;

  p {
    background-color: #171717;
    @include setFontToBaseline(28px, 1, 1);
    padding-top: 2em;
    padding-bottom: 2em;
  }
}

.home__berec-2__outer {

}
.home__berec-2__inner {
  @include container;

}
.home__berec-2__content {
  @include span(24);
  color: $sti-blue-light-new;

}

.home__berec-3__outer {

}
.home__berec-3__inner {
  @include container;

}
.home__berec-3__content {
  @include span(24);
  color: $sti-blue-light-new;
  background-color: $sti-white;
  padding-top: 1em;
  padding-bottom: 2em;
  @include susy-breakpoint($mobile, $tablet-small) {
    min-height: 200px !important;
  }
  @include susy-breakpoint($tablet-small, $desktop-large) {
    min-height: 512px !important;
  }
  
  img {
    width: 100%;
  }
}

.home__berec-4__outer {

}
.home__berec-4__inner {
  @include container;

}
.home__berec-4__content {
  @include span(24);
  color: $sti-blue-light-new;

}

.home__berec-5__outer {

}
.home__berec-5__inner {
  @include container;

}
.home__berec-5__content {
  @include span(24);
  color: $sti-white;
  text-align: center;
  background-color: #171717;
  padding-top: 2em;
  padding-bottom: 2em;
  h2 {
    margin-top: 0;
    margin-bottom: 0;
    a {
      @extend h2;
      padding-left: 0 !important;
      padding-right: 0 !important;
      color: $sti-red-new;
    }
  }
}

.home__contact-us__outer {

}
.home__contact-us__inner {
  @include container;

}
.home__contact-us__content {
  @include span(24);
  color: $sti-blue-light-new;
}

.home__supported-by__outer {
  background-color: #010101;
}

.home__supported-by__inner {
  $full: (
    columns: 24,
    container: 100%,
    global-box-sizing: border-box
  );

  @include container($full);
}

.home__supported-by__content {
  @include span(24);
  color: $sti-white;
  text-align: center;
}

.home__made-by__outer {
  background-color: $sti-white !important;
}

.home__made-by__inner {
  @include container;
  background-color: $sti-white;
}

.home__made-by__content {
  @include span(24);
  color: $sti-blue-light-new;
  text-align: center;
  p {
    margin-bottom: 30px;
  }
}

.footerlogos {
  ul {
    width: 100%;
  	margin: 0;
  	padding: 0;
  	list-style: none;
  	text-align: center;
  	margin: 0;
  }
}

.footerlogos > li {
	display:inline-block;
	margin: 15px;
	text-align:center;
}

.footerlogos a {
	color: $sti-white;
	text-decoration:none;
	font-size: .9em;
  img {
    max-height: 70px;
  }
}

